deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: elosimulator
spec:
  # minReadySeconds: 3
  # revisionHistoryLimit: 5
  # progressDeadlineSeconds: 60
  # strategy:
  #   rollingUpdate:
  #     maxUnavailable: 0
  #   type: RollingUpdate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: Ajhaa/go-elosimulator
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        # command:
        # - ./podinfo
        # - --port=9898
        # - --port-metrics=9797
        # - --grpc-port=9999
        # - --grpc-service-name=backend
        # - --level=info
        # env:
        # - name: PODINFO_UI_COLOR
        #   value: "#34577c"
        # livenessProbe:
        #   exec:
        #     command:
        #     - podcli
        #     - check
        #     - http
        #     - localhost:9898/healthz
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        # readinessProbe:
        #   exec:
        #     command:
        #     - podcli
        #     - check
        #     - http
        #     - localhost:9898/readyz
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        # resources:
        #   limits:
        #     cpu: 2000m
        #     memory: 512Mi
        #   requests:
        #     cpu: 100m
        #     memory: 32Mi
