deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
