deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: elosimulator
spec:
  backend:
    serviceName: backend
    servicePort: 8080
